styles/Cursor.module.scss
@import './variables';

.cursor-inner {
    width: 10px;
    height: 10px;
    background-color: $accent;
    border: 1px solid $accent;
    border-radius: 50%;
    position: absolute;
    pointer-events: none;
    z-index: 9999;
}

.cursor-outer {
    width: 60px;
    height: 60px;
    position: absolute;
    border: 2px solid $accent;
    border-radius: 50%;
    background-color: rgba(255, 137, 6, 0.3);
    opacity: 0.5;
    pointer-events: none;
    z-index: 9999;
    transition: scale 0.2s ease-out ;
}

@media (max-width: 1023px) {

    .cursor-inner, .cursor-outer {
        display: none;
    }

}

